# NaifZaghmout-Hotel.Naif_resub

./: .gitignore  README.md  TESTING.md  pyproject.toml  requierments.txt  requirements.txt
hotel/: db.sqlite3  manage.py
hotel/app/: admin.py  exceptions.py  models.py  urls.py  views.py
hotel/app/migrations/: 0001_initial.py  0002_contactmessage.py
hotel/app/templatetags/: app_tags.py
hotel/customauth/: tests.py  urls.py  views.py
hotel/hotel/: settings.py  urls.py  wsgi.py
hotel/management/: tests.py  views.py
hotel/managment/: apps.py  tests.py  urls.py  views.py
hotel/templates/: 404.html  about.html  basic.html  contact.html  index.html
hotel/templates/staff/: all_bookings.html  edit_room.html  staff_login_signup.html  staff_panel.html  view_room.html
hotel/templates/user/: book_room.html  my_bookings.html  user_login_signup.html
