[tool.poetry]
name = "Hotel-Naif"
version = "0.1.0"
description = ""
authors = ["NaifZaghmout zaghmout <naif-zaghmout@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
tzdata = "^2023.3"
asgiref = "^3.7.2"
sqlparse = "^0.4.4"
python-decouple = "^3.8"
django-mathfilters = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
